[GEOS-11845] Upgrade GeoServer and GeoWebCache Build to Java 17
* Upgrade build for Java 17 as base Java version
* Configure maven-enforcer-plugin to require Java 17
* Upgrade github actions workflows to use Java 17.
* Centralize maven plugin versions in the root pom's pluginManagement section.
* Reorganize root pom properties into sections
* Update docs for Java 17
* Plugin version upgrades:
  * jacoco 0.8.7 -> 0.8.13
  * maven-checkstyle-plugin 3.1.1 -> 3.6.0
  * maven-compiler-plugin 3.10.1 -> 3.14.0
  * maven-javadoc-plugin 2.10.3 -> 3.11.2
  * maven-jar-plugin 2.4 -> 3.0.2
* Upgrade Jetty 9.x to 10.0.25, last version supporting javax.servlet
* Configure Eclipse to use Java 17 for maven-eclipse-plugin
* Parameter encoding of maven-checkstyle-plugin changed to inputEncoding in 3.2
* Fix compilation errors when compiling with -Werror and Java 17. This
  is independent of the pmd and errorprone checks. Thackling them first.
  * non-varargs call of varargs method with inexact argument type for last parameter;
     * Of special interest, upgrading GridCoverageReader implementations to
       delcare varargs respecting the inherited interfaces, and fix calls
       to read(null) with read()
  * deprecated item is not annotated with @Deprecated
    * Required upgrading javacc-maven-plugin:2.3 -> 3.1.1, changing the
      depregated goal `jjtree` to `jjtree-javacc`, and updating
      wcs1_1/src/main/java/org/geoserver/wcs/kvp/rangesubset/rangeset.jjt
      to change JDK_VERSION = "1.5" to "17" and the encoding to UTF-8
  * unchecked call to put(K,V) as a member of the raw type java.util.Map
  * java.lang.System has been deprecated and marked for removal
  * attempt to synchronize on an instance of a value-based class
* Upgrade errorprone to work with Java 17:
  * add suggested compiler args `-Xep:DeadException:WARN -Xep:GuardedBy:OFF`
  * Add additional errorprone exclusions and fix trivial errors
  * Erroprone fixes:
    * [AssertEqualsArgumentOrderChecker] Arguments 