@@ -10,8 +10,9 @@ GeoServer's speed depends a lot on the chosen Java Runtime Environment (JRE). Th
 
 Tested:
 
-* Java 17 - GeoServer 2.22.x and above (OpenJDK tested, experimental only)
-* Java 11 - GeoServer 2.15.x and above (OpenJDK tested)
+* Java 21 - GeoServer 2.28.x and above (OpenJDK tested, experimental only)
+* Java 17 - GeoServer 2.28.x and above (OpenJDK tested)
+* Java 11 - GeoServer 2.15.x to GeoServer 2.27.x (OpenJDK tested)
 * Java 8 - GeoServer 2.9.x to GeoServer 2.22.x (OpenJDK and Oracle JRE tested)
 * Java 7 - GeoServer 2.6.x to GeoServer 2.8.x (OpenJDK and Oracle JRE tested)
 * Java 6 - GeoServer 2.3.x to GeoServer 2.5.x (Oracle JRE tested)
@@ -24,7 +25,7 @@ As of GeoServer 2.0, a Java Runtime Environment (JRE) is sufficient to run GeoSe
 Running on Java 17
 ----------------------------------
 
-GeoServer is compatible with Java 17, but requires extra care for running in some environments.
+GeoServer 2.28.x and above requires Java 17 as the minimum version. GeoServer has been tested and fully supports Java 17.
 
 Deployment on Tomcat 9.0.55 has been tested with success.
 
@@ -34,19 +35,9 @@ here is the full list of opens used by the build process::
 
    --add-exports=java.desktop/sun.awt.image=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED --add-opens=java.desktop/sun.awt.image=ALL-UNNAMED --add-opens=java.naming/com.sun.jndi.ldap=ALL-UNNAMED --add-opens=java.desktop/sun.java2d.pipe=ALL-UNNAMED
 
-Running on Java 11
+Running on Java 21
 ------------------
 
-GeoServer 2.15 and above will run under Java 11 with no additional configuration on **Tomcat 9** or newer and **Jetty 9.4.12** or newer.
+GeoServer 2.28.x and above supports Java 21 with no additional configuration on **Tomcat 9** or newer and **Jetty 9.4.12** or newer.
 
-Running GeoServer under Java 11 on other Application Servers may require some additional configuration. Some Application Servers do not support Java 11 yet.
-
-* **Wildfly 14** supports Java 11, with some additional configuration - in the run configuration, under VM arguments add:
-
-      --add-modules=java.se
-
-  Future WildFly releases should support Java 11 with no additional configuration.
-
-* **GlassFish** does not currently Java 11, although the upcoming 5.0.1 release is expected to include support for it.
-
-* **WebLogic** do not yet support Java 11.
+Running GeoServer under Java 21 on other Application Servers may require some additional configuration. Most modern Application Servers now support Java 21.
